[tool.poetry]
name = "cactus"
version = "0.1.0"
description = "Providing backend and proxy service for Curtain"
authors = ["Toan Phung <toan.phungkhoiquoctoan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
