[tool.poetry]
name = "cactus"
version = "0.1.0"
description = "Providing backend and proxy service for Curtain"
authors = ["Toan Phung <toan.phungkhoiquoctoan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pandas = "^1.4.0"
tornado = "^6.1"
SQLAlchemy = "^1.4.31"
tornado-sqlalchemy = "^0.7.0"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
